--- a/gust-stylesheet.css
+++ b/gust-stylesheet.css
@@ -106,24 +106,42 @@ body {
     width: 79%;
 }
 
-.menu_title .fa-heart {
+.heart-lite {
     font-size: 27px;
     cursor: pointer;
-    transform: scale(50px);
-    transition: 1s;
-
-    width: 18%;
-}
-.menu_title .fa-heart:hover {
-    font-weight: bolder;
-    color: #9356dc;
+    width: 6%;
+    position: absolute;
+    display: block;
     opacity: 1;
+    z-index: 1;
+    transition: 1s;
+    left: 80%;
+}
+
+.heart-purple {
     font-size: 27px;
     cursor: pointer;
-
-    transform: scale(50px);
-    transition: 1s ease-in;
-    width: 18%;
+    width: 6%;
+    position: absolute;
+    transition: 1s;
+    opacity: 0;
+    z-index: 2;
+    transform: scale(1);
+    background: linear-gradient(#ff79da, #9356dc);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    left: 80%;
+}
+.heart-purple:hover {
+    font-size: 27px;
+    cursor: pointer;
+    width: 6%;
+    transform: scale(1);
+    transition: 1s;
+    opacity: 1;
+    z-index: 2;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 
 .under_title {
@@ -161,12 +179,15 @@ body {
 }
 
 @keyframes move-inside {
-    from {
-        left: 73%;
+    0% {
+        font-weight: 100;
+        font-size: 27px;
     }
 
-    to {
-        left: 56%;
+    100% {
+        font-weight: bold;
+        font-size: 27px;
+        opacity: 1;
     }
 }
 
@@ -205,6 +226,27 @@ body {
     transition: 1s;
     transform: translateX(65px);
     right: 0;
+}
+.content_entrance1:hover .content__dish {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: width 1s;
+}
+.content_entrance2:hover .content__dish {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: width 1s;
+}
+.content_entrance3:hover .content__dish {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: width 1s;
 }
 
 /*animation*/
@@ -247,44 +289,47 @@ body {
 
 .price__entrance1 {
     display: flex;
-    width: 70px;
-    height: 70px;
-    transform: translateX(97px);
+    width: 20%;
+    height: 72px;
+    transform: translateX(70px);
     transition: 1s;
     align-items: flex-end;
     font-family: "robotoregular";
     font-weight: bold;
     justify-content: center;
-    padding: 5px;
-    line-height: 40px;
+    line-height: 56px;
+    position: absolute;
+    left: 61%;
 }
 
 .price__entrance2 {
     display: flex;
-    width: 70px;
-    height: 70px;
-    transform: translateX(97px);
+    width: 20%;
+    height: 72px;
+    transform: translateX(70px);
     transition: 1s;
     align-items: flex-end;
     font-family: "robotoregular";
     font-weight: bold;
     justify-content: center;
-    padding: 5px;
-    line-height: 40px;
+    line-height: 56px;
+    position: absolute;
+    left: 61%;
 }
 
 .price__entrance3 {
     display: flex;
-    width: 70px;
-    height: 70px;
-    transform: translateX(97px);
+    width: 20%;
+    height: 72px;
+    transform: translateX(70px);
     transition: 1s;
     align-items: flex-end;
     font-family: "robotoregular";
     font-weight: bold;
     justify-content: center;
-    padding: 5px;
-    line-height: 40px;
+    line-height: 56px;
+    position: absolute;
+    left: 61%;
 }
 
 /*container_entrance*/
@@ -406,21 +451,50 @@ body {
         transform: translateY(19px);
     }
 }
+
+.content__dinner {
+    width: 80%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    position: absolute;
+}
+
 .content__dish {
-    width: 300px;
-    height: 26px;
+    width: 277px;
+    height: 33px;
     font-size: 17px;
     font-weight: 100;
     display: inline-block;
     font-family: "robotothin";
-}
-
-.content_plate1:hover .content__dish {
-    font-family: "robotothin";
     overflow: hidden;
-    text-overflow: ellipsis("...");
+    text-overflow: ellipsis;
     white-space: nowrap;
-    display: inline-block;
+    transition: width 1s;
+    line-height: 29px;
+}
+/* animation-text-overflow */
+.content_plate1:hover .content__dish {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: width 1s;
+}
+.content_plate2:hover .content__dish {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: width 1s;
+}
+.content_plate3:hover .content__dish {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: width 1s;
 }
 
 .content_entrance1 h4 {
@@ -469,7 +543,7 @@ body {
     align-content: flex-start;
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
-    padding-left: 15px;
+    padding-left: 10px;
     animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity1-plate;
     animation-duration: 1s;
     transform: translateY(-6px);
@@ -489,9 +563,8 @@ body {
     align-content: flex-start;
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
-    padding-left: 15px;
+    padding-left: 10px;
     animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity2-plate;
-
     transform: translateY(10px);
     transition: ease;
     position: relative;
@@ -509,11 +582,9 @@ body {
     align-content: flex-start;
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
-    padding-left: 15px;
+    padding-left: 10px;
     animation: opacity3-plate cubic-bezier(0.47, 0.73, 0.25, 1) 2s;
-
     transform: translateY(25px);
-
     position: relative;
     flex-wrap: wrap;
     cursor: pointer;
@@ -548,44 +619,47 @@ body {
 
 .price__plate1 {
     display: flex;
-    width: 70px;
-    height: 70px;
-    transform: translateX(97px);
+    width: 20%;
+    height: 72px;
+    transform: translateX(70px);
     transition: 1s;
     align-items: flex-end;
     font-family: "robotoregular";
     font-weight: bold;
     justify-content: center;
-    padding: 5px;
-    line-height: 40px;
+    line-height: 56px;
+    position: absolute;
+    left: 61%;
 }
 
 .price__plate2 {
     display: flex;
-    width: 70px;
-    height: 70px;
-    transform: translateX(97px);
+    width: 20%;
+    height: 72px;
+    transform: translateX(70px);
     transition: 1s;
     align-items: flex-end;
     font-family: "robotoregular";
     font-weight: bold;
     justify-content: center;
-    padding: 5px;
-    line-height: 40px;
+    line-height: 56px;
+    position: absolute;
+    left: 61%;
 }
 
 .price__plate3 {
     display: flex;
-    width: 70px;
-    height: 70px;
-    transform: translateX(97px);
+    width: 20%;
+    height: 72px;
+    transform: translateX(70px);
     transition: 1s;
     align-items: flex-end;
     font-family: "robotoregular";
     font-weight: bold;
     justify-content: center;
-    padding: 5px;
-    line-height: 40px;
+    line-height: 56px;
+    position: absolute;
+    left: 61%;
 }
 
 /*anim-content_plate */
@@ -629,7 +703,7 @@ body {
     right: 0;
 }
 
-/*animation*/
+/*animation-check*/
 .content_plate1:hover .price__plate1 {
     transform: translateX(0px);
     transition: 1s;
@@ -771,16 +845,17 @@ body {
 
 .price__dessert1 {
     display: flex;
-    width: 70px;
-    height: 70px;
-    transform: translateX(97px);
+    width: 20%;
+    height: 72px;
+    transform: translateX(70px);
     transition: 1s;
     align-items: flex-end;
     font-family: "robotoregular";
     font-weight: bold;
     justify-content: center;
-    padding: 5px;
-    line-height: 40px;
+    line-height: 56px;
+    position: absolute;
+    left: 61%;
 }
 
 .content_dessert2 {
@@ -827,16 +902,17 @@ body {
 
 .price__dessert2 {
     display: flex;
-    width: 70px;
-    height: 70px;
-    transform: translateX(97px);
+    width: 20%;
+    height: 72px;
+    transform: translateX(70px);
     transition: 1s;
     align-items: flex-end;
     font-family: "robotoregular";
     font-weight: bold;
     justify-content: center;
-    padding: 5px;
-    line-height: 40px;
+    line-height: 56px;
+    position: absolute;
+    left: 61%;
 }
 
 .content_dessert3 {
@@ -883,16 +959,17 @@ body {
 
 .price__dessert3 {
     display: flex;
-    width: 70px;
-    height: 70px;
-    transform: translateX(97px);
+    width: 20%;
+    height: 72px;
+    transform: translateX(70px);
     transition: 1s;
     align-items: flex-end;
     font-family: "robotoregular";
     font-weight: bold;
     justify-content: center;
-    padding: 5px;
-    line-height: 40px;
+    line-height: 56px;
+    position: absolute;
+    left: 61%;
 }
 /*animation*/
 .content_dessert1:hover .price__dessert1 {
@@ -980,7 +1057,27 @@ body {
         transform: translateY(21px);
     }
 }
-
+.content_dessert1:hover .content__dish {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: width 1s;
+}
+.content_dessert2:hover .content__dish {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: width 1s;
+}
+.content_dessert3:hover .content__dish {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: width 1s;
+}
 /*btn-order*/
 .btn_order {
     display: flex;
