--- a/stylesheetfood.css
+++ b/stylesheetfood.css
@@ -37,10 +37,11 @@ body {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     display: flex;
-    height: 259px;
+    width: 100%;
     justify-content: center;
     align-items: end;
-    position: relative;
+    position: absolute;
+    top: 157px;
 }
 
 .content__loader {
@@ -205,7 +206,27 @@ img {
     margin: auto;
     align-items: center;
     justify-content: center;
+    opacity: 1;
+    position: relative;
+    transition: 500ms;
 }
+
+.explore_eat:hover {
+    display: flex;
+    cursor: pointer;
+    background: linear-gradient(#ff79da, #9356dc);
+    border-radius: 30px;
+    width: 71%;
+    height: 51px;
+    box-shadow: 5px 7px 11px 5px lightgrey;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    transform: scale(1.02);
+    opacity: 0.8;
+    transition: 500ms;
+}
+
 .explore_eat p {
     color: white;
 }
